...
} from 'react-native';
import chunk from 'lodash.chunk';

const destinations = [
  {
    id: 0,
    name: 'ICELAND',
    src: require('../assets/images/iceland.jpg'),
    title: 'A ICELAND full of legends',
    subtitle:
      'Iceland, a sparsely populated island with the North Atlantic all around it and flowing magma bubbling through its crust, is wild and remote all around it and flowing magma bubbling...'
  },
  {
...
      </TouchableOpacity>
    );
  }

  render() {
    return (
      <View style={styles.container} testID="homescreen">
        <StatusBar barStyle="dark-content" />
        <ListView
          dataSource={ds.cloneWithRows(photoRows)}
          renderRow={this.renderRow.bind(this)}
        />
      </View>
...
